@@ -107,6 +107,8 @@ Version 2.2.4 - The "don't know yet if there will be another 2.2" version.
 		* Added another common URN ID to the Magnet link handler.
 		* Switch to the 'busy' cursor while bringing up the preferences
 		  window.
+		* Ported several Kademlia fixes from eMule0.49c:
+			- Fixes on handling incoming packets with port zero.
 
 	iz0bbz:
 		* Fixed static linking with GeoIP on MinGW/MSYS.
